[project]
name = "lpnhe-planning-itk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "dash>=2.15.0",
    "intervaltree>=3.1.0",
    "ipykernel>=6.16.2",
    "jupyter>=1.1.1",
    "notebook>=6.5.7",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "plotly>=5.18.0",
    "tqdm>=4.67.1",
]
